Setting up the image title

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](./img/capture_1.png)\n",
     "# Crypto 1 - Project\n",
     "## Description\n",
     "- The project is on the first slide of the course material.\n",
@@ -22,14 +23,14 @@
    "source": [
     "### Part 1: deciphering the message in the first slide\n",
     "\n",
-    "The first challenge is on the first slide of the project.\n",
+    "The first challenge is on the first slide of the project, that I screenshoted and put at the top of this notebook\n",
     "\n",
     "\n",
-    "It was written this: ctlf.rpobakotiy.coo\n",
+    "It was written this: 3 - ctlf.rpobakotiy.coo\n",
     "\n",
-    "![](./img/capture_1.png)\n",
     "\n",
-    "Our first thought was that it may be some rail fence, which is one of the easiest way to encrypt a message.\n",
+    "\n",
+    "Our first thought was that it may be some rail fence because of the number 3, which is one of the easiest way to encrypt a message.\n",
     "\n",
     "\n",
     "We then used this link: https://www.dcode.fr/chiffre-rail-fence\n",
