--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "\n",
     "\n",
-    "Our first thought was that it may be some rail fence because of the number 3, which is one of the easiest way to encrypt a message.\n",
+    "Our first thought was that it may be some rail fence which is one of the easiest way to encrypt a message. The number have been a lead to that, and actually indicated the number of depth.\n",
     "\n",
     "\n",
     "We then used this link: https://www.dcode.fr/chiffre-rail-fence\n",
@@ -81,10 +81,212 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "### First thought\n",
+    "\n",
+    "From the wikipedia page: https://en.wikipedia.org/wiki/BMP_file_format the bmp format has a fixed header which can help us to know some of the characters of the key, or the character if the key is a repetitive single character.\n",
+    "\n",
+    "let's load the file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This file contains: 63642 bytes\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b'%$\\xee\\x9fudgitg\\xffdgi\\x08gud\\x19itg\\x0bdgiugUd'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_bytes = []\n",
+    "with open('./img/ch2.bmp', 'rb') as file:\n",
+    "    img_bytes = file.read()\n",
+    "file_size = len(img_bytes)\n",
+    "print(f\"This file contains: {file_size} bytes\")\n",
+    "img_bytes[:30]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As seen in the wikipedia page of the XOR encryption [here](https://en.wikipedia.org/wiki/XOR_cipher), the first two bytes must be BM, and the xor encryption implies that:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A ^ 0 = 3\n",
+      "A ^ A = 0\n",
+      "(A ^ B) ^ C = A ^ (B ^ C) such as 14 = 14\n",
+      "(B ^ A) ^ A = B ^ 0 = 0 such as 5 = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, B, C = 3, 5, 8\n",
+    "\n",
+    "print(f\"A ^ 0 = {A ^ 0}\")\n",
+    "print(f\"A ^ A = {A ^ A}\")\n",
+    "print(f\"(A ^ B) ^ C = A ^ (B ^ C) such as {(A ^ B) ^ C} = {A ^ (B ^ C)}\")\n",
+    "print(f\"(B ^ A) ^ A = B ^ 0 = 0 such as {(B ^ A) ^ A} = {B ^ 0}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So: for A the real character (the 'B' of 'BM') and C the current character and K as the key as: \n",
+    "\n",
+    "A xor K = C so K = A xor C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:6 ^ K:7 = C:4 so K:7 = A:6 ^ C:4 = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, K, C = 6, 7, A ^ K\n",
+    "print(f\"A:{A} ^ K:{K} = C:{C} so K:{K} = A:{A} ^ C:{C} = {A ^ C}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The wiki says that the first char (A) must be equal to 0x42 in hexa: A = 0x42\n",
+      "At that moment: A:66 C:37 key:103 | check: C = 37\n",
+      "second character as hexa with the same key: 0x43\n",
+      "At that moment: A2:77 C2:36 key:105 | check: C = 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's apply that to our bmp file\n",
+    "# first let's get the key for the first character\n",
+    "A = b'B'[0]\n",
+    "print(f\"The wiki says that the first char (A) must be equal to 0x42 in hexa: A = {hex(A)}\")\n",
+    "C = img_bytes[0]\n",
+    "key1 = A ^ C\n",
+    "print(f\"At that moment: A:{A} C:{C} key:{key1} | check: C = {A ^ key1}\")\n",
+    "\n",
+    "# check if it works for the second with the same key. The second must be: 0x4D\n",
+    "print(f\"second character as hexa with the same key: {hex(img_bytes[1] ^ key1)}\")\n",
+    "\n",
+    "# So the second character does not have the same key. Let's find it\n",
+    "A2, C2 = b'M'[0], img_bytes[1]\n",
+    "key2 = A2 ^ C2\n",
+    "print(f\"At that moment: A2:{A2} C2:{C2} key:{key2} | check: C = {A2 ^ key2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can go a little bit further in our testing, because we know that the file size is 62kb, which should be encoded in the next 4 bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If this is 0, the length of the key is relevant: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import struct\n",
+    "file_size_real = file_size\n",
+    "file_size_real_bytes = file_size_real.to_bytes(4, byteorder = 'little')\n",
+    "\n",
+    "# getting the interesting part of the header containing the size\n",
+    "file_size_crypted_bytes = img_bytes[2:6]\n",
+    "\n",
+    "key = []\n",
+    "key.append(key1)\n",
+    "key.append(key2)\n",
+    "\n",
+    "for i in range(4):\n",
+    "    key.append(file_size_real_bytes[i] ^ file_size_crypted_bytes[i])\n",
+    "\n",
+    "# first of all, let's check that the size of the file is a multiple of six for the key to work\n",
+    "print(f\"If this is 0, the length of the key is relevant: {file_size_real % 6}\")\n",
+    "    \n",
+    "# let's imagine that the actual key was 6 bytes long\n",
+    "index = 0\n",
+    "img_bytes_decrypted = []\n",
+    "for b in img_bytes:\n",
+    "    img_bytes_decrypted.append(b ^ key[index % len(key)])\n",
+    "    index = index + 1\n",
+    "img_bytes_decrypted = bytes(img_bytes_decrypted)\n",
+    "\n",
+    "with open(\"./img/ch2-decrypted.bmp\", \"wb\") as new_file:\n",
+    "    new_file.write(img_bytes_decrypted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It worked !!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Challenge Three: Oh no, I just lost the IV (initialization vector) we use for every encrypted file in our production system\n",
     "All i have is a screenshot of one time I encrypted some data with it, but the screenshot got edited by a L337 hacker ! Can you help me ? the screenshot is here: /ch3.jpg\n",
     "\n",
-    "screenshot link: https://crypto.blackfoot.io/ch3.jpg"
+    "screenshot link: https://crypto.blackfoot.io/ch3.jpg\n",
+    "\n"
    ]
   },
   {
