--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -181,8 +181,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply these tests to our real world problem\n",
+    "let's apply that to our bmp file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +205,6 @@
     }
    ],
    "source": [
-    "# let's apply that to our bmp file\n",
     "# first let's get the key for the first character\n",
     "A = b'B'[0]\n",
     "print(f\"The wiki says that the first char (A) must be equal to 0x42 in hexa: A = {hex(A)}\")\n",
@@ -205,7 +212,7 @@
     "key1 = A ^ C\n",
     "print(f\"At that moment: A:{A} C:{C} key:{key1} | check: C = {A ^ key1}\")\n",
     "\n",
-    "# check if it works for the second with the same key. The second must be: 0x4D\n",
+    "# check if it works for the second byte with the same key. The second must be: 0x4D\n",
     "print(f\"second character as hexa with the same key: {hex(img_bytes[1] ^ key1)}\")\n",
     "\n",
     "# So the second character does not have the same key. Let's find it\n",
