--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -277,15 +277,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It worked !!!!"
+    "It worked !!!!\n",
+    "\n",
+    "The created bmp is in the img folder"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
