adding new requirements

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -294,6 +294,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First: try to run the code given on the screenshot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Crypto'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-f4a87789fcb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbase64\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mCrypto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCipher\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAES\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplaintext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I was lost, but lqzdqzlqzd\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Crypto'"
+     ]
+    }
+   ],
+   "source": [
+    "import base64\n",
+    "import hashlib\n",
+    "from Crypto.Cipher import AES\n",
+    "\n",
+    "plaintext = \"I was lost, but lqzdqzlqzd\"\n",
+    "\n",
+    "bs = AES.block_size\n",
+    "\n",
+    "# i'm going to make the iv the same length of the real iv he used on the screenshot\n",
+    "key = hashlib.sha256(\"omgwtfbbq\".encode()).digest()\n",
+    "iv = \"1234567891234567\".encode()\n",
+    "\n",
+    "cipher = AES.new(key, AES.MODE_CBC, iv)\n",
+    "\n",
+    "ciphertext = cipher.encrypt(plaintext.encode())\n",
+    "\n",
+    "print(''.join(format(x, '02x') for x in ciphertext))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
