beginning of the challenge3

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -302,18 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Crypto'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-100-f4a87789fcb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbase64\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mCrypto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCipher\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAES\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplaintext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I was lost, but lqzdqzlqzd\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Crypto'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block_size = 16 and plaintext len = 32\n",
+      "2de58fabf38a46e0bb0886d797ee75c24048264056f54d6f14d0c5276df9cf0f\n"
      ]
     }
    ],
@@ -322,10 +319,10 @@
     "import hashlib\n",
     "from Crypto.Cipher import AES\n",
     "\n",
-    "plaintext = \"I was lost, but lqzdqzlqzd\"\n",
+    "plaintext = \"I was lost, but lqzdqzlqzdzqddqd\"\n",
     "\n",
     "bs = AES.block_size\n",
-    "\n",
+    "print(f\"block_size = {bs} and plaintext len = {len(plaintext)}\")\n",
     "# i'm going to make the iv the same length of the real iv he used on the screenshot\n",
     "key = hashlib.sha256(\"omgwtfbbq\".encode()).digest()\n",
     "iv = \"1234567891234567\".encode()\n",
@@ -335,6 +332,13 @@
     "ciphertext = cipher.encrypt(plaintext.encode())\n",
     "\n",
     "print(''.join(format(x, '02x') for x in ciphertext))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can deduce that there are two blocks"
    ]
   },
   {
