--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
      "text": [
       "block_size = 16 and plaintext len = 32\n",
       "My result:  2de58fabf38a46e0bb0886d797ee75c28704e8fdb52aa3720ddd113610637e63\n",
-      "his result: xxf374a82db50b23xxxxxb88f1d976ddc1cf6db4524aac04e222853969367e0d\n"
+      "his result: 00f374a82db50b2300000b88f1d976ddc1cf6db4524aac04e222853969367e0d\n"
      ]
     }
    ],
@@ -332,8 +332,9 @@
     "\n",
     "ciphertext = cipher.encrypt(plaintext.encode())\n",
     "\n",
-    "printed_result_for_him = \"xxf374a82db50b23xxxxxb88f1d976ddc1cf6db4524aac04e222853969367e0d\"\n",
-    "print(f\"My result:  {''.join(format(x, '02x') for x in ciphertext)}\")\n",
+    "printed_result_for_him = \"00f374a82db50b2300000b88f1d976ddc1cf6db4524aac04e222853969367e0d\"\n",
+    "myresult = ''.join(format(x, '02x') for x in ciphertext)\n",
+    "print(f\"My result:  {myresult}\")\n",
     "print(f\"his result: {printed_result_for_him}\")"
    ]
   },
@@ -345,29 +346,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First thought\n",
+    "\n",
+    "With AES, the plain text is xored with the IV, then ciphered. So as seen in the previous challenge we have:\n",
+    "    - A: plain text\n",
+    "    - IV: the Initialization vector\n",
+    "    - B: xored plain text\n",
+    "    - C: xored ciphered text\n",
+    "\n",
+    "We can then conclude that: IV = ((deciphered(C)) = B) ^ A\n",
+    "\n",
+    "Let's try that with my IV = \"1234567891234567\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "block 1 plain text: 'I was lost, but '\n"
+      "My iv: 1234567891234567\n"
      ]
     }
    ],
    "source": [
-    "plaintext_b1 = plaintext[:16]\n",
-    "print(f\"block 1 plain text: '{plaintext_b1}'\")"
+    "myresult_bytes = bytes.fromhex(myresult)\n",
+    "ciphered_xored_b1 = myresult_bytes[:bs]\n",
+    "cipher = AES.new(key, AES.MODE_ECB)\n",
+    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "deciphered_b1 = plaintext[:bs].encode()\n",
+    "print(f\"My iv: {''.join(format(deciphered_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It worked perfectly, let's try this method on the real ciphered text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My iv: sb°\u0018Ù¹ci\u0016ûÌ`ãe\n"
+     ]
+    }
+   ],
+   "source": [
+    "printed_result_for_him_bytes = bytes.fromhex(printed_result_for_him)\n",
+    "ciphered_xored_b1 = printed_result_for_him_bytes[:bs]\n",
+    "cipher = AES.new(key, AES.MODE_ECB)\n",
+    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "deciphered_b1 = plaintext[:bs].encode()\n",
+    "myiv = ''.join(format(deciphered_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))\n",
+    "print(f\"My iv: {myiv}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# last step\n",
+    "cipher = AES.new(key, AES.MODE_CBC, myiv)\n",
+    "ciphered_xored_b1 = printed_result_for_him_bytes[bs:]\n",
+    "deciphered_b2 cipher.decrypt(ciphered_xored_b1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well it seems that it may not be the solution right now, it would work if i was not missing some part of the ciphered text"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,7 +453,9 @@
     "\n",
     "cipher text: https://crypto.blackfoot.io/rsa1cipher.txt\n",
     "\n",
-    "Oh yeah - and here's a number that could be useful :)"
+    "Oh yeah - and here's a number that could be useful :)\n",
+    "\n",
+    "P = 11901234461494228310064076121482038286429650089208969229876184007349956782094248940290427800597817633601014470221576037327691902428151823981665392121868907"
    ]
   },
   {
@@ -392,13 +466,6 @@
    "source": [
     "P = 11901234461494228310064076121482038286429650089208969229876184007349956782094248940290427800597817633601014470221576037327691902428151823981665392121868907"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
