--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "A, B, C = 3, 5, 8\n",
+    "GabrielA, B, C = 3, 5, 8\n",
     "\n",
     "print(f\"A ^ 0 = {A ^ 0}\")\n",
     "print(f\"A ^ A = {A ^ A}\")\n",
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "import struct\n",
+    "Gabrielimport struct\n",
     "file_size_real = file_size\n",
     "file_size_real_bytes = file_size_real.to_bytes(4, byteorder = 'little')\n",
     "\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
     "myresult_bytes = bytes.fromhex(myresult)\n",
     "ciphered_xored_b1 = myresult_bytes[:bs]\n",
     "cipher = AES.new(key, AES.MODE_ECB)\n",
-    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "deciphered_xoreGabrield_b1 = cipher.decrypt(ciphered_xored_b1)\n",
     "deciphered_b1 = plaintext[:bs].encode()\n",
     "print(f\"My iv: {''.join(format(deciphered_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))}\")"
    ]
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -415,30 +415,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Well it seems that it may not be the solution right now, it would work if i was not missing some part of the ciphered text\n",
+    "\n",
+    "### trying to decipher the second block instead\n",
+    "\n",
+    "This is my second attempt: I will try to decipher the second block to find the second part of the plain text to be able to find the missing parts en the first par of the ciphered text"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"low I'm Á¿ånd...\""
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# last step\n",
-    "cipher = AES.new(key, AES.MODE_CBC, myiv)\n",
-    "ciphered_xored_b1 = printed_result_for_him_bytes[bs:]\n",
-    "deciphered_b2 cipher.decrypt(ciphered_xored_b1)\n",
-    "\n"
+    "ciphered_xored_b2 = printed_result_for_him_bytes[bs:bs * 2]\n",
+    "cipher = AES.new(key, AES.MODE_ECB)\n",
+    "deciphered_xored_b2 = cipher.decrypt(ciphered_xored_b2)\n",
+    "# it will be partial\n",
+    "deciphered_b2 = ''.join(format(decGabrieliphered_xored_b2[i] ^ printed_result_for_him_bytes[i], 'c') for i in range(bs))\n",
+    "deciphered_b2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Well it seems that it may not be the solution right now, it would work if i was not missing some part of the ciphered text"
+    "This is promising !! But even though we know that, the goal of this challenge is to find the iv..\n",
+    "Aniway now i know the cleartext, it's clear that the missing part are the L of the low, which is supposed to be n for now, and found for the last word "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'00f374a82db50b2300000b88f1d976ddc1cf6db4524aac04e222853969367e0d'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'02f374a82db50b23a7d09b88f1d976dd'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preparing variables\n",
+    "plaintext = \"I was lost, but now I'm found...\"\n",
+    "plaintext_bytes = plaintext.encode()\n",
+    "plaintext_bytes_b1 = plaintext_bytes[:bs]\n",
+    "plaintext_bytes_b2 = plaintext_bytes[bs:bs * 2]\n",
+    "ciphered_xored = bytes.fromhex(printed_result_for_him)\n",
+    "ciphered_xored_b1 = ciphered_xored[:bs]\n",
+    "ciphered_xored_b2 = ciphered_xored[bs:bs * 2]\n",
+    "\n",
+    "cipher = AES.new(key, AES.MODE_ECB)\n",
+    "deciphered_xored_b2 = cipher.decrypt(ciphered_xored_b2)\n",
+    "print(f\"'{printed_result_for_him}'\")\n",
+    "printed_ciphered_xored_reconstructed_b1 = ''.join(format(plaintext_bytes_b2[i] ^ deciphered_xored_b2[i], '02x') for i in range(bs))\n",
+    "ciphered_xored_reconstructed_b1 = bytes.fromhex(printed_ciphered_xored_reconstructed_b1)\n",
+    "printed_ciphered_xored_reconstructed_b1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like it worked ! let's recover the iv with this reconstructed ciphered xored text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My iv: sb°\u0018Ù¹ci\u0016ûÌ`ãe\n"
+     ]
+    }
+   ],
+   "source": [
+    "cipher = AES.new(key, AES.MODE_ECB)\n",
+    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "\n",
+    "myiv = ''.join(format(plaintext_bytes_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))\n",
+    "print(f\"My iv: {myiv}\")"
    ]
   },
   {
@@ -489,7 +575,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Gabriel"
+   ]
   }
  ],
  "metadata": {
