setting up challenge 4

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -114,7 +114,7 @@
    ],
    "source": [
     "img_bytes = []\n",
-    "with open('./img/ch2.bmp', 'rb') as file:\n",
+    "with open('./ressources/ch2.bmp', 'rb') as file:\n",
     "    img_bytes = file.read()\n",
     "file_size = len(img_bytes)\n",
     "print(f\"This file contains: {file_size} bytes\")\n",
@@ -269,7 +269,7 @@
     "    index = index + 1\n",
     "img_bytes_decrypted = bytes(img_bytes_decrypted)\n",
     "\n",
-    "with open(\"./img/ch2-decrypted.bmp\", \"wb\") as new_file:\n",
+    "with open(\"./ressources/ch2-decrypted.bmp\", \"wb\") as new_file:\n",
     "    new_file.write(img_bytes_decrypted)"
    ]
   },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "'02f374a82db50b23a7d09b88f1d976dd'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,20 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My iv: sb°\u0018Ù¹ci\u0016ûÌ`ãe\n"
+      "My iv: h4ppyh4ppya5canB\n"
      ]
     }
    ],
    "source": [
     "cipher = AES.new(key, AES.MODE_ECB)\n",
-    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_b1)\n",
+    "deciphered_xored_b1 = cipher.decrypt(ciphered_xored_reconstructed_b1)\n",
     "\n",
     "myiv = ''.join(format(plaintext_bytes_b1[i] ^ deciphered_xored_b1[i], 'c') for i in range(bs))\n",
     "print(f\"My iv: {myiv}\")"
@@ -534,10 +534,9 @@
     "## Challenge Four: WARM UP, let's see if you got my class\n",
     "Download /rsa.pem, it's a public key. Now download /rsa1cipher.txt the message was encrypted using the pkcs1 OAEP algorithm with this public key. Try decrypting it.\n",
     "\n",
-    "public key: https://crypto.blackfoot.io/rsa.pem\n",
+    "public key: https://crypto.blackfoot.io/rsa1.pem\n",
     "\n",
-    "\n",
-    "cipher text: https://crypto.blackfoot.io/rsa1cipher.txt\n",
+    "cipher text: https://crypto.blackfoot.io/rsa1Cipher.txt\n",
     "\n",
     "Oh yeah - and here's a number that could be useful :)\n",
     "\n",
@@ -551,6 +550,37 @@
    "outputs": [],
    "source": [
     "P = 11901234461494228310064076121482038286429650089208969229876184007349956782094248940290427800597817633601014470221576037327691902428151823981665392121868907"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-b1029f3cc220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./resources/rsa1Cipher.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mciphertext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcipher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mciphertext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/Crypto/Cipher/PKCS1_OAEP.py\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ciphertext)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m         \u001b[0;31m# See 7.1.2 in RFC3447\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 161\u001b[0;31m         \u001b[0mmodBits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCrypto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUtil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    162\u001b[0m         \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mceil_div\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodBits\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Convert from bits to bytes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0mhLen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_hashObj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdigest_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'n'"
+     ]
+    }
+   ],
+   "source": [
+    "from Crypto.Cipher import PKCS1_OAEP\n",
+    "from Crypto.PublicKey import RSA\n",
+    "\n",
+    "message = b'You can attack now!'\n",
+    "key = RSA.importKey(open('./resources/rsa1.pem').read())\n",
+    "cipher = PKCS1_OAEP.new(P)\n",
+    "\n",
+    "with open('./resources/rsa1Cipher.txt', 'rb') as message:\n",
+    "    ciphertext = cipher.decrypt(message.read())\n",
+    "    print(ciphertext)"
    ]
   },
   {
