wikipedia link correction

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen in the wikipedia page of the XOR encryption [here](https://en.wikipedia.org/wiki/XOR_cipher), the first two bytes must be BM, and the xor encryption implies that:"
+    "As seen in the wikipedia page of the BMP encryption [here](https://en.wikipedia.org/wiki/XOR_cipher), the first two bytes must be BM, and the xor encryption implies that:"
    ]
   },
   {
@@ -145,7 +145,7 @@
     }
    ],
    "source": [
-    "GabrielA, B, C = 3, 5, 8\n",
+    "A, B, C = 3, 5, 8\n",
     "\n",
     "print(f\"A ^ 0 = {A ^ 0}\")\n",
     "print(f\"A ^ A = {A ^ A}\")\n",
@@ -279,7 +279,7 @@
    "source": [
     "It worked !!!!\n",
     "\n",
-    "The created bmp is in the img folder"
+    "The created bmp is in the resource folder"
    ]
   },
   {
