--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen in the wikipedia page of the BMP encryption [here](https://en.wikipedia.org/wiki/XOR_cipher), the first two bytes must be BM, and the xor encryption implies that:"
+    "As seen in the wikipedia page of the XOR encryption [here](https://en.wikipedia.org/wiki/XOR_cipher), and BMP format [here](https://en.wikipedia.org/wiki/BMP_file_format) the first two bytes must be BM, and the xor encryption implies that:"
    ]
   },
   {
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "Gabrielimport struct\n",
+    "import struct\n",
     "file_size_real = file_size\n",
     "file_size_real_bytes = file_size_real.to_bytes(4, byteorder = 'little')\n",
     "\n",
